# TwinGuard

./: .dockerignore  .gitignore  README.md  dependencies.repos  docker-compose.microservices.yaml
.github/workflows/: ros2-ci.yml
demo/: 1_start_stack.sh  demo_launch.py  demo_profile.csv  record_metrics.py
docker/px4_sitl/: Dockerfile
docker/ros2_ws/: Dockerfile
docs/: Design_doc.md  architecture.md  deployment.md  engineering_plan.md  environment.md  quickstart.md  real_dataset_replay.md  topic_contract.md
results/: demo_metrics_summary.txt  demo_run_metrics.csv
ros2_ws/src/twinguard_dataset_replay/: package.xml  setup.cfg  setup.py
ros2_ws/src/twinguard_dataset_replay/twinguard_dataset_replay/: __init__.py  dataset_replay_node.py  trust_visualizer_node.py
ros2_ws/src/twinguard_swarm_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/twinguard_swarm_bringup/launch/: twinguard_dataset_replay_integrity.launch.py  twinguard_ekf_integrity.launch.py  twinguard_integrity.launch.py  twinguard_single_uav_replay_mission.launch.py  twinguard_three_uav_replay_mission.launch.py
ros2_ws/src/twinguard_swarm_bringup/test/: test_integrity_supervisor_pipeline.py
ros2_ws/src/twinguard_swarm_estimation_cpp/: CMakeLists.txt  package.xml
ros2_ws/src/twinguard_swarm_estimation_cpp/include/twinguard_swarm_estimation_cpp/: ekf_estimator.hpp  visual_odometry.hpp
ros2_ws/src/twinguard_swarm_estimation_cpp/src/: ekf_estimator.cpp  ekf_integrity_node.cpp  visual_odometry.cpp  visual_odometry_node.cpp
ros2_ws/src/twinguard_swarm_estimation_cpp/test/: test_ekf_estimator.cpp
ros2_ws/src/twinguard_swarm_integrity/: setup.cfg  setup.py
ros2_ws/src/twinguard_swarm_integrity/twinguard_swarm_integrity/: integrity_node.py  offboard_mission_controller.py
ros2_ws/src/twinguard_swarm_integrity_cpp/: CMakeLists.txt  package.xml
ros2_ws/src/twinguard_swarm_integrity_cpp/include/twinguard_swarm_integrity_cpp/: offboard_supervisor.hpp  trust_scorer.hpp
ros2_ws/src/twinguard_swarm_integrity_cpp/src/: formation_supervisor_node.cpp  integrity_node.cpp  offboard_supervisor.cpp  trust_scorer.cpp
ros2_ws/src/twinguard_swarm_integrity_cpp/test/: test_trust_scorer.cpp
ros2_ws/src/twinguard_swarm_planning_cpp/: CMakeLists.txt  package.xml
ros2_ws/src/twinguard_swarm_planning_cpp/include/twinguard_swarm_planning_cpp/: astar_planner.hpp  bt_nodes.hpp
ros2_ws/src/twinguard_swarm_planning_cpp/src/: astar_planner.cpp  bt_nodes.cpp
ros2_ws/src/twinguard_swarm_planning_cpp/test/: test_astar_planner.cpp
ros2_ws/src/twinguard_swarm_planning_cpp/trees/: twinguard_mission.xml
