<?xml version="1.0"?>
<package format="3">
  <name>twinguard_swarm_planning_cpp</name>
  <version>0.1.0</version>
  <description>Behavior-tree mission supervision and local A* replanning for TwinGuard.</description>
  <maintainer email="nitin@example.com">Nitin</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>behaviortree_cpp_v3</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
